# app/Http/Controllers/LandingController.php
@@ -2,6 +2,10 @@
 
 namespace App\Http\Controllers;
 
+
+use Illuminate\Http\Request;
+use Illuminate\Http\Response;
+
 /**
  * @OA\Info(
  *     version="1.0.0",
@@ -22,10 +26,66 @@ namespace App\Http\Controllers;
  */
 class LandingController extends Controller
 {
+    /**
+     * @OA\Get(
+     *    path="/api/pages/landing",
+     *    tags={"Pages"},
+     *    summary="Get content of landing page",
+     *    description="Get content of landing page",
+     *      @OA\Response(
+     *          response=200,
+     *          description="Successful operation",
+     *         @OA\JsonContent(
+     *             type="array",
+     *             @OA\Items(ref="#/components/schemas/Section")
+     *         ),
+     *       ),
+     *  )
+     */
     function index()
     {
         return response([
             'sections' => SectionController::index(),
         ], 200);
+    }
+
+    /**
+     * @OA\Post(
+     *   path="/api/pages/landing/search",
+     *    tags={"Pages"},
+     *   summary="Search",
+     *     @OA\RequestBody(
+     *         @OA\MediaType(
+     *             mediaType="application/json",
+     *             @OA\Schema(
+     *                 @OA\Property(
+     *                     property="query",
+     *                     type="string"
+     *                 ),
+     *                   @OA\Property(
+     *                          property="locations",
+     *                        type="array",
+     *                        @OA\Items(
+     *                            type="integer"
+     *                        ),
+     *                   ),
+     *                        @OA\Property(
+     *                          property="sections",
+     *                        type="array",
+     *                        @OA\Items(
+     *                            type="integer"
+     *                        ),
+     *                   ),
+     *                 example={ "query": "hospoda", "locations": { 1}, "sections" : {2,4}}
+     *             )
+     *         )
+     *     ),
+     *   @OA\Response(response=200, description="OK"),
+     *   @OA\Response(response=400, description="Bad request")
+     * )
+     */
+    public function search(Request $request): Response
+    {
+        return response();
     }
 }
